--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,20 @@
 body {
   text-align: center;
-  background-color: #283149;
+  background-color: #59D5E0;
 }
 
 h1 {
   font-size: 5rem;
-  color: #DBEDF3;
+  color: #F5DD61;
   font-family: "Arvo", cursive;
-  text-shadow: 3px 0 #DA0463;
+  text-shadow: 3px 0 #FAA300;
 
 }
 
 footer {
-  color: #DBEDF3;
+  color: #F4538A;
   font-family: sans-serif;
+  font-weight: bold;
 }
 
 .w {
@@ -64,12 +65,12 @@ footer {
 
 .drum {
   outline: none;
-  border: 10px solid #404B69;
+  border: 10px solid #F5DD61;
   font-size: 5rem;
   font-family: 'Arvo', cursive;
   line-height: 2;
   font-weight: 900;
-  color: #DA0463;
+  color: #FAA300;
   text-shadow: 3px 0 #DBEDF3;
   border-radius: 15px;
   display: inline-block;
